// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputComponent rendering component should match snapshot with no @Input properties defined 1`] = `
<ogm-input
  ogm={[Function Function]}
  placeholderMessage={[Function Function]}
  validate={[Function Function]}
>
  <div
    class="ogm-form"
  >
    <input
      autocomplete="off"
      data-tes=""
      data-testid="ogm-input"
      maxlength="10"
      placeholder=""
      type="text"
    />
  </div>
</ogm-input>
`;

exports[`InputComponent rendering component should match snapshot with validate set to false 1`] = `
<ogm-input
  ogm={[Function Function]}
  placeholderMessage={[Function Function]}
  validate={[Function Function]}
>
  <div
    class="ogm-form"
  >
    <input
      autocomplete="off"
      data-tes=""
      data-testid="ogm-input"
      maxlength="10"
      placeholder="Placeholder message"
      type="text"
    />
  </div>
</ogm-input>
`;

exports[`InputComponent rendering component should match snapshot with validate set to true 1`] = `
<ogm-input
  ogm={[Function Function]}
  placeholderMessage={[Function Function]}
  validate={[Function Function]}
>
  <div
    class="ogm-form"
  >
    <input
      autocomplete="off"
      data-tes=""
      data-testid="ogm-input"
      maxlength="12"
      placeholder="Placeholder message"
      type="text"
    />
  </div>
</ogm-input>
`;
